err/cisco-deviot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cisco_deviot'...
Compiling './lib/python3.5/site-packages/cisco_deviot/__init__.py'...
***   File "./lib/python3.5/site-packages/cisco_deviot/__init__.py", line 37
    print """
   ___           ________  ______
  / _ \___ _  __/  _/ __ \/_  __/
 / // / -_) |/ // // /_/ / / /
/____/\__/|___/___/\____/ /_/"""
             
                                 
                                 
                              
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cisco_deviot/gateway.py'...
***   File "./lib/python3.5/site-packages/cisco_deviot/gateway.py", line 161
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cisco_deviot/mqtt_connector.py'...
***   File "./lib/python3.5/site-packages/cisco_deviot/mqtt_connector.py", line 77
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cisco_deviot-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/paho'...
Listing './lib/python3.5/site-packages/paho/mqtt'...
Listing './lib/python3.5/site-packages/paho_mqtt-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
